# mediatheory

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
mediatheory/: decorator.py  ffmpeg.py  log.py  sh.py
mediatheory/ai/: runway.py
mediatheory/entrypoints/: concat.py  gblur.py  gif.py  invert.py  reverse.py  runway.py  stitch.py
mediatheory/system/: dir.py  ffmpeg.py  main.py
